--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,33 +1,38 @@
 html,
 body,
-
 .app {
-    heigth: 100vh;
-    background: #eee;
-    padding: 1em;
+  height: 100vh;
+  background: #eee;
+  padding: 1em;
 }
 
 /* Messages.js */
-
 .messages {
-    height: 440px;
-    overflow-y: scroll;
+  height: 56vh;
+  overflow-y: scroll;
+}
+
+.messages__progress {
+  height: 54vh;
+  overflow-y: scroll;
 }
 
 /* MessageForm.js */
-
 .message__form {
-    position: fixed !important;
-    bottom: 1em;
-    margin-left: 320px !important;
-    left: 0;
-    right: 1em;
-    z-index: 200;
+  position: fixed !important;
+  bottom: 1em;
+  margin-left: 320px !important;
+  left: 0;
+  right: 1em;
+  z-index: 200;
 }
 
-/* Message.js*/
-
+/* Message.js */
 .message__self {
-    border-left: 2px solid orange;
-    padding-left: 8px;
+  border-left: 2px solid orange;
+  padding-left: 8px;
+}
+
+.message__image {
+  padding: 1em;
 }
