--- a/src/components/App.css
+++ b/src/components/App.css
@@ -41,3 +41,24 @@ body,
 .message__image {
   padding: 1em;
 }
+
+/* ColorPanel.js*/
+
+.color__container {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  width: 35px;
+  border-radius: 3px;
+}
+
+.color__square {
+  width: 35px;
+  height: 35px;
+}
+
+.color__overlay {
+  width: 85px;
+  height: 35px;
+  transform: rotate(225deg);
+}
